--- a/client/index.html
+++ b/client/index.html
@@ -119,7 +119,7 @@
       <header id="header">
         <div id="logo" class="fl_left">
           <div class="container-logo">
-            <img  src="https://www.vhv.rs/dpng/d/588-5886888_farmers-market-market-stall-png-icon-transparent-png.png" alt="">
+            <img  src="https://www.vhv.rs/dpng/d/29-295866_vector-abstract-background-png-transparent-png.png" alt="">
             <h1><a href="index.html"> PuAc</a></h1>
           </div>
           
@@ -138,12 +138,12 @@
             </li>
 
             <li id="accountLi">
-              <a title="Account" href="#" id="openLoginModal"
+              <a title="Cont" href="#" id="openLoginModal"
                 ><i class="far fa-user"></i> Cont</a
               >
             </li>
             <li id="accountLiWithUsername" style="display: none">
-              <a title="Account" href="#">
+              <a title="Cont" href="#">
                 <i class="far fa-user"></i>
                 Bine ai venit,
               </a>
@@ -202,7 +202,7 @@
               <i class="icon orange circle fa fa-bell-o"></i>
               <h2 class="heading">Schimba idei</h2>
               <p class="mb-10">
-                Acum te poti consulta si schimab idei cu sfatuitori pentru achizitia perfecta.
+                Acum te poti consulta si schimba idei cu sfatuitori pentru achizitia perfecta.
               </p>
             </article>
           </div>
